--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
-  "name": "application-name",
+  "name": "virtual-dom-hx",
   "version": "0.0.1",
   "devDependencies": {
-    "lodash": "^4.16.4"
+    "babel": "^6.5.2",
+    "babel-cli": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-tape-runner": "^2.0.1",
+    "lodash": "^4.16.4",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.2"
+  },
+  "scripts": {
+    "run": "",
+    "test": "babel-tape-runner ./test/recorder.js | tap-spec"
   }
 }
