--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-rollup": "^1.2.0",
     "babel-tape-runner": "^2.0.1",
+    "chai": "^3.5.0",
     "lodash": "^4.16.4",
     "rollup": "^0.36.3",
     "rollup-plugin-buble": "^0.14.0",
     "rollup-plugin-commonjs": "^5.0.5",
     "tap-spec": "^4.1.1",
-    "tape": "^4.6.2"
+    "tape": "^4.6.2",
+    "testcafe": "^0.9.0"
   },
   "scripts": {
     "run": "node rollup.config.js",
-    "test": "babel-tape-runner ./test/recorder.js | tap-spec"
+    "test": "testcafe chrome test/"
   }
 }
