--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "rollup": "^0.36.3",
     "rollup-plugin-buble": "^0.14.0",
     "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-uglify": "^1.0.1",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.2",
     "testcafe": "^0.9.0"
